# Checkin

./: CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  vcpkg.json  РРП Проект.sln
include/: config.h  models.h
include/db/: database.h  migrator.h
include/handlers/: handlers.h
include/kafka/: consumer.h  outbox.h  producer.h
include/services/: cache_service.h  checkin_service.h
include/utils/: time_utils.h  uuid.h
sql/: schema.sql
src/: main.cpp
src/db/: database.cpp  migrator.cpp
src/handlers/: checkin_handlers.cpp  health_handler.cpp
src/kafka/: consumer.cpp  outbox.cpp  producer.cpp
src/services/: cache_service.cpp  checkin_service.cpp
src/utils/: time_utils.cpp  uuid.cpp
РРП Проект/: CMakeLists.txt  docker-compose.yml  РРП Проект.vcxproj  РРП Проект.vcxproj.filters
РРП Проект/handlers/: handlers.h
РРП Проект/kafka/: producer.cpp
РРП Проект/services/: checkin_service.cpp  checkin_service.h
РРП Проект/sql/: schema.sql
РРП Проект/utils/: time_utils.cpp  time_utils.h  uuid.cpp
